# engrim

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/scripts/: engrim-bootstrap.sh
src/engrim/: __init__.py  cli.py
tests/: test_engrim.py  test_v04.py
